cmake_minimum_required(VERSION 3.23)
project(
        SDL3-Bros
        VERSION 1.0
        DESCRIPTION "Side Scroller Game"
        LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(VENDOR_DIR "${PROJECT_SOURCE_DIR}/vendored")

add_subdirectory(${VENDOR_DIR}/SDL EXCLUDE_FROM_ALL)
add_subdirectory(${VENDOR_DIR}/SDL-image EXCLUDE_FROM_ALL)
add_subdirectory(${VENDOR_DIR}/SDL-mixer EXCLUDE_FROM_ALL)
add_subdirectory(${VENDOR_DIR}/SDL-ttf EXCLUDE_FROM_ALL)
add_subdirectory(Game/SDL3-Bros)